# audiobook-narration-poc

./: .gitignore  ARCHITECTURE.md  README.md  narrator_cli.py  pyproject.toml  requirements.txt  setup.py
config/: emotions.json
examples/: ghost_story.json
narrator/: __init__.py  emotion_config.py  input_parser.py  piper_wrapper.py  post_processor.py
tests/: test_narrator.py
