[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "audiobook-narrator"
version = "0.1.0"
description = "Emotional audiobook narration using Piper TTS"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Ferenc Acs" },
]
dependencies = [
  "piper-tts>=1.2.0",
  "pydub>=0.25.1",
]
scripts = { audiobook-narrator = "narrator_cli:main" }

[tool.setuptools]
packages = ["narrator"]

[dependency-groups]
dev = [
  "pytest>=7.0",
]
